file movements git push origin main

--- a/test_test.ipynb
+++ b/test_test.ipynb
@@ -2,31 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "43200fd5",
+   "execution_count": 19,
+   "id": "0bc2b3a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "import time\n",
-    "\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "85a0e6e1",
+   "execution_count": 20,
+   "id": "6747b1f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_basic_position(style):\n",
+    "    \n",
+    "    print(style)\n",
     "\n",
     "    splitted = style.split('(')\n",
     "    width = float(splitted[2].split('%')[0])\n",
@@ -48,59 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "a617fb78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_detailed_position(style, gk, df, mf, fw):\n",
-    "    \n",
-    "    splitted = style.split('(')\n",
-    "    width = float(splitted[2].split('%')[0])\n",
-    "    height = float(splitted[1].split('%')[0])\n",
-    "    \n",
-    "    right_position = \"\"\n",
-    "    \n",
-    "    if width < 10:\n",
-    "        position = \"GK\"\n",
-    "    elif width < 20:\n",
-    "        if df > 3:\n",
-    "            if height < 20 or height > 80:\n",
-    "                position = \"WB\"\n",
-    "            else:\n",
-    "                position = \"CB\"\n",
-    "        else:\n",
-    "            position = \"CB\"\n",
-    "    elif width == 25:\n",
-    "        if height < 20 or height > 80:\n",
-    "            position = \"WB\"\n",
-    "        else:\n",
-    "            position = \"DM\"\n",
-    "    elif width == 30:\n",
-    "        if mf == 3:\n",
-    "            position = \"CM\"\n",
-    "        else:\n",
-    "            if height < 20 or height > 80:\n",
-    "                position = \"WM\"\n",
-    "            else:\n",
-    "                position = \"CM\"\n",
-    "    elif width == 35:\n",
-    "        if height == 50:\n",
-    "            position = \"AM\"\n",
-    "        else:\n",
-    "            position = \"WF\"\n",
-    "    else:\n",
-    "        if height < 20 or height > 80:\n",
-    "            position = \"WF\"\n",
-    "        else:\n",
-    "            position = \"ST\"\n",
-    "    \n",
-    "    return position"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 37,
    "id": "a7f3d0a4",
    "metadata": {},
    "outputs": [],
@@ -108,15 +50,19 @@
     "def get_home_lineup(comp, year, home_team, away_team):\n",
     "    \n",
     "    from scores_and_fixtures import season_results_and_fixtures\n",
+    "    from internal_packages import check_name\n",
+    "    from internal_packages.get_position import get_basic_position, get_detailed_position\n",
     "    from datetime import datetime\n",
     "    import pandas as pd\n",
     "    import requests\n",
     "    from bs4 import BeautifulSoup\n",
     "\n",
     "    results_df = season_results_and_fixtures(comp, year)\n",
+    "    home_team = check_name.get_team_name(home_team)\n",
+    "    away_team = check_name.get_team_name(away_team)\n",
     "    \n",
     "    for i, row in results_df.iterrows():\n",
-    "        if row['home_team'].lower() == home_team.lower() and row['away_team'].lower() == away_team.lower():\n",
+    "        if row['home_team'] == home_team and row['away_team'] == away_team:\n",
     "            url = f\"https://fbref.com/{row['match_url']}\"\n",
     "            resp = requests.get(url) \n",
     "            resp.encoding = 'utf-8'\n",
@@ -164,16 +110,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 38,
    "id": "5ad168ab",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
-      "  df = df.apply(pd.to_numeric, errors='ignore')\n"
+      "5.0\n",
+      "50.0\n",
+      "15.0\n",
+      "66.6666666666667\n",
+      "15.0\n",
+      "83.3333333333333\n",
+      "25.0\n",
+      "33.3333333333333\n",
+      "45.0\n",
+      "50.0\n",
+      "40.0\n",
+      "83.3333333333333\n",
+      "15.0\n",
+      "33.3333333333333\n",
+      "15.0\n",
+      "16.6666666666667\n",
+      "35.0\n",
+      "50.0\n",
+      "25.0\n",
+      "66.6666666666667\n",
+      "40.0\n",
+      "16.6666666666667\n",
+      "5.0\n",
+      "50.0\n",
+      "15.0\n",
+      "66.6666666666667\n",
+      "15.0\n",
+      "83.3333333333333\n",
+      "25.0\n",
+      "33.3333333333333\n",
+      "45.0\n",
+      "50.0\n",
+      "40.0\n",
+      "83.3333333333333\n",
+      "15.0\n",
+      "33.3333333333333\n",
+      "15.0\n",
+      "16.6666666666667\n",
+      "35.0\n",
+      "50.0\n",
+      "25.0\n",
+      "66.6666666666667\n",
+      "40.0\n",
+      "16.6666666666667\n"
      ]
     },
     {
@@ -206,141 +194,141 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>22</td>\n",
-       "      <td>David Raya</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Sven Ulreich</td>\n",
        "      <td>GK</td>\n",
        "      <td>GK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>William Saliba</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Matthijs de Ligt</td>\n",
        "      <td>DF</td>\n",
        "      <td>CB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Ben White</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Joshua Kimmich</td>\n",
        "      <td>DF</td>\n",
        "      <td>WB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Gabriel Magalhães</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>CB</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Leon Goretzka</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>DM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Bukayo Saka</td>\n",
-       "      <td>FW</td>\n",
-       "      <td>WF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Martin Ødegaard</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>CM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Gabriel Martinelli</td>\n",
-       "      <td>FW</td>\n",
-       "      <td>WF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>20</td>\n",
-       "      <td>Jorginho</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>CM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>29</td>\n",
-       "      <td>Kai Havertz</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Harry Kane</td>\n",
        "      <td>FW</td>\n",
        "      <td>ST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Oleksandr Zinchenko</td>\n",
+       "      <th>5</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Leroy Sané</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>WF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Eric Dier</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>CB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Alphonso Davies</td>\n",
        "      <td>DF</td>\n",
        "      <td>WB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>41</td>\n",
-       "      <td>Declan Rice</td>\n",
+       "      <th>8</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Thomas Müller</td>\n",
        "      <td>MF</td>\n",
-       "      <td>CM</td>\n",
+       "      <td>AM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Konrad Laimer</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>DM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Jamal Musiala</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>WF</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Aaron Ramsdale</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Daniel Peretz</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Emile Smith Rowe</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Dayot Upamecano</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>14</td>\n",
-       "      <td>Eddie Nketiah</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Kim Min-jae</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>15</td>\n",
-       "      <td>Jakub Kiwior</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Serge Gnabry</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>17</td>\n",
-       "      <td>Cédric Soares</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Kingsley Coman</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>19</td>\n",
-       "      <td>Leandro Trossard</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Eric Maxim Choupo-Moting</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>24</td>\n",
-       "      <td>Reiss Nelson</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Bryan Zaragoza</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>25</td>\n",
-       "      <td>Mohamed Elneny</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Mathys Tel</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>76</td>\n",
-       "      <td>Reuell Walters</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Noussair Mazraoui</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -349,42 +337,58 @@
        "</div>"
       ],
       "text/plain": [
-       "   squad_number               player position det_pos\n",
-       "0            22           David Raya       GK      GK\n",
-       "1             2       William Saliba       DF      CB\n",
-       "2             4            Ben White       DF      WB\n",
-       "3             6    Gabriel Magalhães       DF      CB\n",
-       "4             7          Bukayo Saka       FW      WF\n",
-       "5             8      Martin Ødegaard       MF      CM\n",
-       "6            11   Gabriel Martinelli       FW      WF\n",
-       "7            20             Jorginho       MF      CM\n",
-       "8            29          Kai Havertz       FW      ST\n",
-       "9            35  Oleksandr Zinchenko       DF      WB\n",
-       "10           41          Declan Rice       MF      CM\n",
-       "11            1       Aaron Ramsdale      NaN     NaN\n",
-       "12           10     Emile Smith Rowe      NaN     NaN\n",
-       "13           14        Eddie Nketiah      NaN     NaN\n",
-       "14           15         Jakub Kiwior      NaN     NaN\n",
-       "15           17        Cédric Soares      NaN     NaN\n",
-       "16           19     Leandro Trossard      NaN     NaN\n",
-       "17           24         Reiss Nelson      NaN     NaN\n",
-       "18           25       Mohamed Elneny      NaN     NaN\n",
-       "19           76       Reuell Walters      NaN     NaN"
+       "   squad_number                    player position det_pos\n",
+       "0            26              Sven Ulreich       GK      GK\n",
+       "1             4          Matthijs de Ligt       DF      CB\n",
+       "2             6            Joshua Kimmich       DF      WB\n",
+       "3             8             Leon Goretzka       MF      DM\n",
+       "4             9                Harry Kane       FW      ST\n",
+       "5            10                Leroy Sané       FW      WF\n",
+       "6            15                 Eric Dier       DF      CB\n",
+       "7            19           Alphonso Davies       DF      WB\n",
+       "8            25             Thomas Müller       MF      AM\n",
+       "9            27             Konrad Laimer       MF      DM\n",
+       "10           42             Jamal Musiala       FW      WF\n",
+       "11           18             Daniel Peretz      NaN     NaN\n",
+       "12            2           Dayot Upamecano      NaN     NaN\n",
+       "13            3               Kim Min-jae      NaN     NaN\n",
+       "14            7              Serge Gnabry      NaN     NaN\n",
+       "15           11            Kingsley Coman      NaN     NaN\n",
+       "16           13  Eric Maxim Choupo-Moting      NaN     NaN\n",
+       "17           17            Bryan Zaragoza      NaN     NaN\n",
+       "18           39                Mathys Tel      NaN     NaN\n",
+       "19           40         Noussair Mazraoui      NaN     NaN"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_home_lineup(\"eng\", 2023, \"Arsenal\", \"Liverpool\")"
+    "get_home_lineup(\"ger\", 2023, \"bayern\", \"bvb\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d75f95c8",
+   "id": "c8909a08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53b1a8de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b1dd5b6",
    "metadata": {},
    "outputs": [],
    "source": []
