--- a/goals_points_correlation.ipynb
+++ b/goals_points_correlation.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from internal_packages import player_stats"
+    "import player_stats"
    ]
   },
   {
