--- a/test_test.ipynb
+++ b/test_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "0bc2b3a4",
    "metadata": {},
    "outputs": [],
@@ -13,45 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "6747b1f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_basic_position(style):\n",
-    "    \n",
-    "    print(style)\n",
-    "\n",
-    "    splitted = style.split('(')\n",
-    "    width = float(splitted[2].split('%')[0])\n",
-    "    height = float(splitted[1].split('%')[0])\n",
-    "    \n",
-    "    group = \"\"\n",
-    "    \n",
-    "    if width < 10:\n",
-    "        group = \"GK\"\n",
-    "    elif width < 20:\n",
-    "        group = \"DF\"\n",
-    "    elif width < 40:\n",
-    "        group = \"MF\"\n",
-    "    else:\n",
-    "        group = \"FW\"\n",
-    "  \n",
-    "    return group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "a7f3d0a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_home_lineup(comp, year, home_team, away_team):\n",
+    "def get_home_stats(comp, year, home_team, away_team):\n",
     "    \n",
     "    from scores_and_fixtures import season_results_and_fixtures\n",
-    "    from internal_packages import check_name\n",
-    "    from internal_packages.get_position import get_basic_position, get_detailed_position\n",
+    "    import check_name\n",
+    "    from get_position import get_basic_position, get_detailed_position\n",
     "    from datetime import datetime\n",
     "    import pandas as pd\n",
     "    import requests\n",
@@ -69,7 +40,7 @@
     "            soup = BeautifulSoup(resp.text.replace('<!--', '').replace('--!>', ''), 'html.parser')\n",
     "            \n",
     "            div_lineup_home = soup.find('div', {'class':'lineup'}, {'id':'a'})\n",
-    "            numbers, player_names, positions = [], [], []\n",
+    "            numbers, player_ids, player_names, positions = [], [], [], []\n",
     "            \n",
     "            players = div_lineup_home.find_all('td')\n",
     "                \n",
@@ -78,10 +49,9 @@
     "                    numbers.append(value.get_text())\n",
     "                elif i % 2 == 1: \n",
     "                    player_names.append(value.get_text())\n",
+    "                    player_ids.append(value.a.get('href').split('/')[3])\n",
     "                    \n",
-    "            df = pd.DataFrame(list(zip(numbers, player_names)), columns = ['squad_number', 'player'])\n",
-    "            \n",
-    "            positions = []\n",
+    "            df = pd.DataFrame(list(zip(numbers, player_ids, player_names)), columns = ['squad_number', 'player_id', 'player'])\n",
     "            \n",
     "            for i, row in df.iterrows():\n",
     "                try:\n",
@@ -104,13 +74,17 @@
     "                    get_det_position = get_detailed_position(style, keepers, defenders, midfielders, forwards)\n",
     "                    df.at[i, 'det_pos'] = get_det_position\n",
     "                except: pass\n",
+    "                \n",
+    "            df = df.fillna('Sub')\n",
+    "            \n",
+    "    print(url)\n",
     "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "5ad168ab",
    "metadata": {},
    "outputs": [
@@ -118,50 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0\n",
-      "50.0\n",
-      "15.0\n",
-      "66.6666666666667\n",
-      "15.0\n",
-      "83.3333333333333\n",
-      "25.0\n",
-      "33.3333333333333\n",
-      "45.0\n",
-      "50.0\n",
-      "40.0\n",
-      "83.3333333333333\n",
-      "15.0\n",
-      "33.3333333333333\n",
-      "15.0\n",
-      "16.6666666666667\n",
-      "35.0\n",
-      "50.0\n",
-      "25.0\n",
-      "66.6666666666667\n",
-      "40.0\n",
-      "16.6666666666667\n",
-      "5.0\n",
-      "50.0\n",
-      "15.0\n",
-      "66.6666666666667\n",
-      "15.0\n",
-      "83.3333333333333\n",
-      "25.0\n",
-      "33.3333333333333\n",
-      "45.0\n",
-      "50.0\n",
-      "40.0\n",
-      "83.3333333333333\n",
-      "15.0\n",
-      "33.3333333333333\n",
-      "15.0\n",
-      "16.6666666666667\n",
-      "35.0\n",
-      "50.0\n",
-      "25.0\n",
-      "66.6666666666667\n",
-      "40.0\n",
-      "16.6666666666667\n"
+      "https://fbref.com//en/matches/0788c1f1/Real-Madrid-Sevilla-February-25-2024-La-Liga\n"
      ]
     },
     {
@@ -186,6 +117,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>squad_number</th>\n",
+       "      <th>player_id</th>\n",
        "      <th>player</th>\n",
        "      <th>position</th>\n",
        "      <th>det_pos</th>\n",
@@ -194,201 +126,196 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>26</td>\n",
-       "      <td>Sven Ulreich</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3061e1ec</td>\n",
+       "      <td>Andriy Lunin</td>\n",
        "      <td>GK</td>\n",
        "      <td>GK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Matthijs de Ligt</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2946f9a1</td>\n",
+       "      <td>Nacho</td>\n",
        "      <td>DF</td>\n",
        "      <td>CB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Joshua Kimmich</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>WB</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7111d552</td>\n",
+       "      <td>Vinicius Júnior</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>WF</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>8</td>\n",
-       "      <td>Leon Goretzka</td>\n",
+       "      <td>6ce1f46f</td>\n",
+       "      <td>Toni Kroos</td>\n",
        "      <td>MF</td>\n",
-       "      <td>DM</td>\n",
+       "      <td>CM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Harry Kane</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8f5e92a6</td>\n",
+       "      <td>Rodrygo</td>\n",
        "      <td>FW</td>\n",
        "      <td>ST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Leroy Sané</td>\n",
-       "      <td>FW</td>\n",
-       "      <td>WF</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0959c2a2</td>\n",
+       "      <td>Federico Valverde</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>CM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>15</td>\n",
-       "      <td>Eric Dier</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>CB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>19</td>\n",
-       "      <td>Alphonso Davies</td>\n",
+       "      <td>17</td>\n",
+       "      <td>fd51b456</td>\n",
+       "      <td>Lucas Vázquez</td>\n",
        "      <td>DF</td>\n",
        "      <td>WB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>18</td>\n",
+       "      <td>4f255115</td>\n",
+       "      <td>Aurélien Tchouaméni</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>CM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>25</td>\n",
-       "      <td>Thomas Müller</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>AM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>27</td>\n",
-       "      <td>Konrad Laimer</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>DM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>42</td>\n",
-       "      <td>Jamal Musiala</td>\n",
+       "      <td>21</td>\n",
+       "      <td>407feb71</td>\n",
+       "      <td>Brahim Díaz</td>\n",
        "      <td>FW</td>\n",
        "      <td>WF</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>22</td>\n",
+       "      <td>18b896d6</td>\n",
+       "      <td>Antonio Rüdiger</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>CB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>3cefcaef</td>\n",
+       "      <td>Ferland Mendy</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>WB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>18</td>\n",
-       "      <td>Daniel Peretz</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>25</td>\n",
+       "      <td>28d596a0</td>\n",
+       "      <td>Kepa Arrizabalaga</td>\n",
+       "      <td>Sub</td>\n",
+       "      <td>Sub</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Dayot Upamecano</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>26</td>\n",
+       "      <td>ef6a4afe</td>\n",
+       "      <td>Diego Piñeiro</td>\n",
+       "      <td>Sub</td>\n",
+       "      <td>Sub</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Kim Min-jae</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6025fab1</td>\n",
+       "      <td>Luka Modrić</td>\n",
+       "      <td>Sub</td>\n",
+       "      <td>Sub</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Serge Gnabry</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>19</td>\n",
+       "      <td>c0617e2b</td>\n",
+       "      <td>Dani Ceballos</td>\n",
+       "      <td>Sub</td>\n",
+       "      <td>Sub</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Kingsley Coman</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7226539b</td>\n",
+       "      <td>Fran Garcia</td>\n",
+       "      <td>Sub</td>\n",
+       "      <td>Sub</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Eric Maxim Choupo-Moting</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>3741ca58</td>\n",
+       "      <td>Arda Güler</td>\n",
+       "      <td>Sub</td>\n",
+       "      <td>Sub</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>17</td>\n",
-       "      <td>Bryan Zaragoza</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>29</td>\n",
+       "      <td>49a6ecbb</td>\n",
+       "      <td>Álvaro Rodríguez</td>\n",
+       "      <td>Sub</td>\n",
+       "      <td>Sub</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>39</td>\n",
-       "      <td>Mathys Tel</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>40</td>\n",
-       "      <td>Noussair Mazraoui</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>41</td>\n",
+       "      <td>4772b1d1</td>\n",
+       "      <td>Jacobo Ramón</td>\n",
+       "      <td>Sub</td>\n",
+       "      <td>Sub</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   squad_number                    player position det_pos\n",
-       "0            26              Sven Ulreich       GK      GK\n",
-       "1             4          Matthijs de Ligt       DF      CB\n",
-       "2             6            Joshua Kimmich       DF      WB\n",
-       "3             8             Leon Goretzka       MF      DM\n",
-       "4             9                Harry Kane       FW      ST\n",
-       "5            10                Leroy Sané       FW      WF\n",
-       "6            15                 Eric Dier       DF      CB\n",
-       "7            19           Alphonso Davies       DF      WB\n",
-       "8            25             Thomas Müller       MF      AM\n",
-       "9            27             Konrad Laimer       MF      DM\n",
-       "10           42             Jamal Musiala       FW      WF\n",
-       "11           18             Daniel Peretz      NaN     NaN\n",
-       "12            2           Dayot Upamecano      NaN     NaN\n",
-       "13            3               Kim Min-jae      NaN     NaN\n",
-       "14            7              Serge Gnabry      NaN     NaN\n",
-       "15           11            Kingsley Coman      NaN     NaN\n",
-       "16           13  Eric Maxim Choupo-Moting      NaN     NaN\n",
-       "17           17            Bryan Zaragoza      NaN     NaN\n",
-       "18           39                Mathys Tel      NaN     NaN\n",
-       "19           40         Noussair Mazraoui      NaN     NaN"
+       "   squad_number player_id               player position det_pos\n",
+       "0            13  3061e1ec         Andriy Lunin       GK      GK\n",
+       "1             6  2946f9a1                Nacho       DF      CB\n",
+       "2             7  7111d552      Vinicius Júnior       FW      WF\n",
+       "3             8  6ce1f46f           Toni Kroos       MF      CM\n",
+       "4            11  8f5e92a6              Rodrygo       FW      ST\n",
+       "5            15  0959c2a2    Federico Valverde       MF      CM\n",
+       "6            17  fd51b456        Lucas Vázquez       DF      WB\n",
+       "7            18  4f255115  Aurélien Tchouaméni       MF      CM\n",
+       "8            21  407feb71          Brahim Díaz       FW      WF\n",
+       "9            22  18b896d6      Antonio Rüdiger       DF      CB\n",
+       "10           23  3cefcaef        Ferland Mendy       DF      WB\n",
+       "11           25  28d596a0    Kepa Arrizabalaga      Sub     Sub\n",
+       "12           26  ef6a4afe        Diego Piñeiro      Sub     Sub\n",
+       "13           10  6025fab1          Luka Modrić      Sub     Sub\n",
+       "14           19  c0617e2b        Dani Ceballos      Sub     Sub\n",
+       "15           20  7226539b          Fran Garcia      Sub     Sub\n",
+       "16           24  3741ca58           Arda Güler      Sub     Sub\n",
+       "17           29  49a6ecbb     Álvaro Rodríguez      Sub     Sub\n",
+       "18           41  4772b1d1         Jacobo Ramón      Sub     Sub"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_home_lineup(\"ger\", 2023, \"bayern\", \"bvb\")"
+    "get_home_stats(\"esp\", 2023, \"real madrid\", \"sevilla\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8909a08",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53b1a8de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b1dd5b6",
+   "id": "2daaf92b",
    "metadata": {},
    "outputs": [],
    "source": []
