--- a/test_test.ipynb
+++ b/test_test.ipynb
@@ -2,33 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0bc2b3a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 859,
    "id": "a7f3d0a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_home_stats(comp, year, home_team, away_team):\n",
+    "def home_game_stats(comp, year, home_team, away_team):\n",
     "    \n",
-    "    from scores_and_fixtures import season_results_and_fixtures\n",
+    "    import scores_and_fixtures\n",
     "    import check_name\n",
     "    from get_position import get_basic_position, get_detailed_position\n",
     "    from datetime import datetime\n",
     "    import pandas as pd\n",
     "    import requests\n",
     "    from bs4 import BeautifulSoup\n",
+    "    from collections import defaultdict\n",
     "\n",
-    "    results_df = season_results_and_fixtures(comp, year)\n",
+    "    results_df = scores_and_fixtures.season_results_and_fixtures(comp, year)\n",
     "    home_team = check_name.get_team_name(home_team)\n",
     "    away_team = check_name.get_team_name(away_team)\n",
     "    \n",
@@ -39,283 +29,140 @@
     "            resp.encoding = 'utf-8'\n",
     "            soup = BeautifulSoup(resp.text.replace('<!--', '').replace('--!>', ''), 'html.parser')\n",
     "            \n",
-    "            div_lineup_home = soup.find('div', {'class':'lineup'}, {'id':'a'})\n",
-    "            numbers, player_ids, player_names, positions = [], [], [], []\n",
+    "            tables = soup.find_all('table', {'class':'stats_table sortable'})\n",
+    "            tbodies = soup.find_all('tbody')\n",
     "            \n",
-    "            players = div_lineup_home.find_all('td')\n",
-    "                \n",
-    "            for i, value in enumerate(players):\n",
-    "                if i % 2 == 0:\n",
-    "                    numbers.append(value.get_text())\n",
-    "                elif i % 2 == 1: \n",
-    "                    player_names.append(value.get_text())\n",
-    "                    player_ids.append(value.a.get('href').split('/')[3])\n",
+    "            home_team_id = tables[0].get('id').split('_')[1]\n",
+    "            away_team_id = tables[-1].get('id').split('_')[1]\n",
+    "            \n",
+    "            for table in tables:\n",
+    "                if table.get('id').split('_')[1] == home_team_id:\n",
+    "                    player_ids, player_names = [], []\n",
     "                    \n",
-    "            df = pd.DataFrame(list(zip(numbers, player_ids, player_names)), columns = ['squad_number', 'player_id', 'player'])\n",
+    "                    th = table.find_all('th', {'data-stat':'player'})\n",
+    "                    \n",
+    "                    for h in th:\n",
+    "                        if player_ids.append(h.get('data-append-csv')) not in player_ids:\n",
+    "                            player_ids.append(h.get('data-append-csv'))\n",
+    "                        if player_names.append(h.get('csk')) not in player_names:\n",
+    "                            player_names.append(h.get('csk'))\n",
+    "                            \n",
+    "                    df = pd.DataFrame(list(zip(player_ids, player_names)), columns = ['player_id', 'player'])\n",
+    "                    df = df.drop(df.index[0]).reset_index(drop = True)\n",
+    "                    df = df[:-1].reset_index(drop = True)\n",
     "            \n",
-    "            for i, row in df.iterrows():\n",
-    "                try:\n",
-    "                    player_div = soup.find(\"div\", {\"title\":{row['player']}})\n",
-    "                    style = player_div[\"style\"]\n",
-    "                    get_position = get_basic_position(style)\n",
-    "                    df.at[i, 'position'] = get_position\n",
-    "                    positions.append(get_position)\n",
-    "                except: pass\n",
-    "                \n",
-    "            keepers = positions.count(\"GK\")\n",
-    "            defenders = positions.count(\"DF\")\n",
-    "            midfielders = positions.count(\"MF\")\n",
-    "            forwards = positions.count(\"FW\")\n",
-    "                \n",
-    "            for i, row in df.iterrows():\n",
-    "                try:\n",
-    "                    player_div = soup.find(\"div\", {\"title\":{row['player']}})\n",
-    "                    style = player_div[\"style\"]\n",
-    "                    get_det_position = get_detailed_position(style, keepers, defenders, midfielders, forwards)\n",
-    "                    df.at[i, 'det_pos'] = get_det_position\n",
-    "                except: pass\n",
-    "                \n",
-    "            df = df.fillna('Sub')\n",
+    "            for table in tables:\n",
+    "                if table.get('id').split('_')[1] == home_team_id:\n",
+    "                    headers, full_player_values = [], []\n",
+    "                    rows = table.find_all('tr')\n",
+    "                    \n",
+    "                    row_for_headers = rows[-1].find_all('td')\n",
+    "                    \n",
+    "                    for value in row_for_headers:\n",
+    "                        headers.append(value.get('data-stat'))\n",
+    "                    \n",
+    "                    for row in rows:\n",
+    "                        player_values = []\n",
+    "                        data = row.find_all('td')\n",
+    "                        for value in data:\n",
+    "                            player_values.append(value.get_text())\n",
+    "                        full_player_values.append(player_values)\n",
+    "                        \n",
+    "                    data_df = pd.DataFrame(full_player_values, columns = headers)\n",
+    "                    data_df = data_df.dropna()\n",
+    "                    data_df = data_df[:-1].reset_index(drop = True)\n",
+    "                    \n",
+    "                    df = pd.concat([df, data_df], axis = 1)\n",
+    "                    \n",
+    "            df = df.loc[:, ~df.columns.duplicated()]\n",
     "            \n",
-    "    print(url)\n",
+    "            df = df.apply(pd.to_numeric, errors = 'ignore') \n",
+    "            \n",
+    "            df = df.fillna(0)\n",
+    "            \n",
+    "            return df\n",
+    "        \n",
+    "        \n",
+    "def away_game_stats(comp, year, home_team, away_team):\n",
+    "    \n",
+    "    import scores_and_fixtures\n",
+    "    import check_name\n",
+    "    from get_position import get_basic_position, get_detailed_position\n",
+    "    from datetime import datetime\n",
+    "    import pandas as pd\n",
+    "    import requests\n",
+    "    from bs4 import BeautifulSoup\n",
+    "    from collections import defaultdict\n",
     "\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "5ad168ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://fbref.com//en/matches/0788c1f1/Real-Madrid-Sevilla-February-25-2024-La-Liga\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>squad_number</th>\n",
-       "      <th>player_id</th>\n",
-       "      <th>player</th>\n",
-       "      <th>position</th>\n",
-       "      <th>det_pos</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>13</td>\n",
-       "      <td>3061e1ec</td>\n",
-       "      <td>Andriy Lunin</td>\n",
-       "      <td>GK</td>\n",
-       "      <td>GK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2946f9a1</td>\n",
-       "      <td>Nacho</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>CB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>7111d552</td>\n",
-       "      <td>Vinicius Júnior</td>\n",
-       "      <td>FW</td>\n",
-       "      <td>WF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>6ce1f46f</td>\n",
-       "      <td>Toni Kroos</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>CM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11</td>\n",
-       "      <td>8f5e92a6</td>\n",
-       "      <td>Rodrygo</td>\n",
-       "      <td>FW</td>\n",
-       "      <td>ST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>15</td>\n",
-       "      <td>0959c2a2</td>\n",
-       "      <td>Federico Valverde</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>CM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>17</td>\n",
-       "      <td>fd51b456</td>\n",
-       "      <td>Lucas Vázquez</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>WB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>18</td>\n",
-       "      <td>4f255115</td>\n",
-       "      <td>Aurélien Tchouaméni</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>CM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>21</td>\n",
-       "      <td>407feb71</td>\n",
-       "      <td>Brahim Díaz</td>\n",
-       "      <td>FW</td>\n",
-       "      <td>WF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>22</td>\n",
-       "      <td>18b896d6</td>\n",
-       "      <td>Antonio Rüdiger</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>CB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>23</td>\n",
-       "      <td>3cefcaef</td>\n",
-       "      <td>Ferland Mendy</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>WB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>25</td>\n",
-       "      <td>28d596a0</td>\n",
-       "      <td>Kepa Arrizabalaga</td>\n",
-       "      <td>Sub</td>\n",
-       "      <td>Sub</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>26</td>\n",
-       "      <td>ef6a4afe</td>\n",
-       "      <td>Diego Piñeiro</td>\n",
-       "      <td>Sub</td>\n",
-       "      <td>Sub</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>10</td>\n",
-       "      <td>6025fab1</td>\n",
-       "      <td>Luka Modrić</td>\n",
-       "      <td>Sub</td>\n",
-       "      <td>Sub</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>19</td>\n",
-       "      <td>c0617e2b</td>\n",
-       "      <td>Dani Ceballos</td>\n",
-       "      <td>Sub</td>\n",
-       "      <td>Sub</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>20</td>\n",
-       "      <td>7226539b</td>\n",
-       "      <td>Fran Garcia</td>\n",
-       "      <td>Sub</td>\n",
-       "      <td>Sub</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>24</td>\n",
-       "      <td>3741ca58</td>\n",
-       "      <td>Arda Güler</td>\n",
-       "      <td>Sub</td>\n",
-       "      <td>Sub</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>29</td>\n",
-       "      <td>49a6ecbb</td>\n",
-       "      <td>Álvaro Rodríguez</td>\n",
-       "      <td>Sub</td>\n",
-       "      <td>Sub</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>41</td>\n",
-       "      <td>4772b1d1</td>\n",
-       "      <td>Jacobo Ramón</td>\n",
-       "      <td>Sub</td>\n",
-       "      <td>Sub</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   squad_number player_id               player position det_pos\n",
-       "0            13  3061e1ec         Andriy Lunin       GK      GK\n",
-       "1             6  2946f9a1                Nacho       DF      CB\n",
-       "2             7  7111d552      Vinicius Júnior       FW      WF\n",
-       "3             8  6ce1f46f           Toni Kroos       MF      CM\n",
-       "4            11  8f5e92a6              Rodrygo       FW      ST\n",
-       "5            15  0959c2a2    Federico Valverde       MF      CM\n",
-       "6            17  fd51b456        Lucas Vázquez       DF      WB\n",
-       "7            18  4f255115  Aurélien Tchouaméni       MF      CM\n",
-       "8            21  407feb71          Brahim Díaz       FW      WF\n",
-       "9            22  18b896d6      Antonio Rüdiger       DF      CB\n",
-       "10           23  3cefcaef        Ferland Mendy       DF      WB\n",
-       "11           25  28d596a0    Kepa Arrizabalaga      Sub     Sub\n",
-       "12           26  ef6a4afe        Diego Piñeiro      Sub     Sub\n",
-       "13           10  6025fab1          Luka Modrić      Sub     Sub\n",
-       "14           19  c0617e2b        Dani Ceballos      Sub     Sub\n",
-       "15           20  7226539b          Fran Garcia      Sub     Sub\n",
-       "16           24  3741ca58           Arda Güler      Sub     Sub\n",
-       "17           29  49a6ecbb     Álvaro Rodríguez      Sub     Sub\n",
-       "18           41  4772b1d1         Jacobo Ramón      Sub     Sub"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_home_stats(\"esp\", 2023, \"real madrid\", \"sevilla\")"
+    "    results_df = scores_and_fixtures.season_results_and_fixtures(comp, year)\n",
+    "    home_team = check_name.get_team_name(home_team)\n",
+    "    away_team = check_name.get_team_name(away_team)\n",
+    "    \n",
+    "    for i, row in results_df.iterrows():\n",
+    "        if row['home_team'] == home_team and row['away_team'] == away_team:\n",
+    "            url = f\"https://fbref.com/{row['match_url']}\"\n",
+    "            resp = requests.get(url) \n",
+    "            resp.encoding = 'utf-8'\n",
+    "            soup = BeautifulSoup(resp.text.replace('<!--', '').replace('--!>', ''), 'html.parser')\n",
+    "            \n",
+    "            tables = soup.find_all('table', {'class':'stats_table sortable'})\n",
+    "            tbodies = soup.find_all('tbody')\n",
+    "            \n",
+    "            home_team_id = tables[0].get('id').split('_')[1]\n",
+    "            away_team_id = tables[-1].get('id').split('_')[1]\n",
+    "            \n",
+    "            for table in tables:\n",
+    "                if table.get('id').split('_')[1] == away_team_id:\n",
+    "                    player_ids, player_names = [], []\n",
+    "                    \n",
+    "                    th = table.find_all('th', {'data-stat':'player'})\n",
+    "                    \n",
+    "                    for h in th:\n",
+    "                        if player_ids.append(h.get('data-append-csv')) not in player_ids:\n",
+    "                            player_ids.append(h.get('data-append-csv'))\n",
+    "                        if player_names.append(h.get('csk')) not in player_names:\n",
+    "                            player_names.append(h.get('csk'))\n",
+    "                            \n",
+    "                    df = pd.DataFrame(list(zip(player_ids, player_names)), columns = ['player_id', 'player'])\n",
+    "                    df = df.drop(df.index[0]).reset_index(drop = True)\n",
+    "                    df = df[:-1].reset_index(drop = True)\n",
+    "            \n",
+    "            for table in tables:\n",
+    "                if table.get('id').split('_')[1] == away_team_id:\n",
+    "                    headers, full_player_values = [], []\n",
+    "                    rows = table.find_all('tr')\n",
+    "                    \n",
+    "                    row_for_headers = rows[-1].find_all('td')\n",
+    "                    \n",
+    "                    for value in row_for_headers:\n",
+    "                        headers.append(value.get('data-stat'))\n",
+    "                    \n",
+    "                    for row in rows:\n",
+    "                        player_values = []\n",
+    "                        data = row.find_all('td')\n",
+    "                        for value in data:\n",
+    "                            player_values.append(value.get_text())\n",
+    "                        full_player_values.append(player_values)\n",
+    "                        \n",
+    "                    data_df = pd.DataFrame(full_player_values, columns = headers)\n",
+    "                    data_df = data_df.dropna()\n",
+    "                    data_df = data_df[:-1].reset_index(drop = True)\n",
+    "                    \n",
+    "                    df = pd.concat([df, data_df], axis = 1)\n",
+    "                    \n",
+    "            df = df.loc[:, ~df.columns.duplicated()]\n",
+    "            \n",
+    "            df = df.apply(pd.to_numeric, errors = 'ignore') \n",
+    "            \n",
+    "            df = df.fillna(0)\n",
+    "            \n",
+    "            return df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2daaf92b",
+   "id": "c7ae04fe",
    "metadata": {},
    "outputs": [],
    "source": []
