--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,558 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "24282de4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import fbref_functions\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "d0976cd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'keeper_full_seasonal_stats',\n",
+       " 'player_full_seasonal_stats',\n",
+       " 'player_seasonal_stats',\n",
+       " 'results_and_fixtures',\n",
+       " 'team_seasonal_opp_stats',\n",
+       " 'team_seasonal_stats']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(fbref_functions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "474e4639",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter competition: eng\n",
+      "Enter season: 2019\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gameweek</th>\n",
+       "      <th>dayofweek</th>\n",
+       "      <th>date</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>home_xg</th>\n",
+       "      <th>home_score</th>\n",
+       "      <th>away_score</th>\n",
+       "      <th>away_xg</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>attendance</th>\n",
+       "      <th>venue</th>\n",
+       "      <th>referee</th>\n",
+       "      <th>match_report</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>match_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Fri</td>\n",
+       "      <td>2019-08-09</td>\n",
+       "      <td>20:00</td>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>Norwich City</td>\n",
+       "      <td>53,333</td>\n",
+       "      <td>Anfield</td>\n",
+       "      <td>Michael Oliver</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/928467bd/Liverpool-Norwich-City-Au...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2019-08-10</td>\n",
+       "      <td>12:30</td>\n",
+       "      <td>West Ham</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>59,870</td>\n",
+       "      <td>London Stadium</td>\n",
+       "      <td>Mike Dean</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/71c8a43e/West-Ham-United-Mancheste...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2019-08-10</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Burnley</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>19,784</td>\n",
+       "      <td>Turf Moor</td>\n",
+       "      <td>Graham Scott</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/34b99058/Burnley-Southampton-Augus...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2019-08-10</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Watford</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>20,245</td>\n",
+       "      <td>Vicarage Road Stadium</td>\n",
+       "      <td>Craig Pawson</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/38111659/Watford-Brighton-and-Hove...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2019-08-10</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>Everton</td>\n",
+       "      <td>25,151</td>\n",
+       "      <td>Selhurst Park</td>\n",
+       "      <td>Jonathan Moss</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/a802f51e/Crystal-Palace-Everton-Au...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>2020-07-26</td>\n",
+       "      <td>16:00</td>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Norwich City</td>\n",
+       "      <td></td>\n",
+       "      <td>Etihad Stadium</td>\n",
+       "      <td>Craig Pawson</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/9099d1e5/Manchester-City-Norwich-C...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>376</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>2020-07-26</td>\n",
+       "      <td>16:00</td>\n",
+       "      <td>Chelsea</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Wolves</td>\n",
+       "      <td></td>\n",
+       "      <td>Stamford Bridge</td>\n",
+       "      <td>Stuart Attwell</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/9cca4ba0/Chelsea-Wolverhampton-Wan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>377</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>2020-07-26</td>\n",
+       "      <td>16:00</td>\n",
+       "      <td>West Ham</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Aston Villa</td>\n",
+       "      <td></td>\n",
+       "      <td>London Stadium</td>\n",
+       "      <td>Michael Oliver</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/a3f59c8e/West-Ham-United-Aston-Vil...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>378</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>2020-07-26</td>\n",
+       "      <td>16:00</td>\n",
+       "      <td>Newcastle Utd</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td></td>\n",
+       "      <td>St. James' Park</td>\n",
+       "      <td>Anthony Taylor</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/b6b1209d/Newcastle-United-Liverpoo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>379</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>2020-07-26</td>\n",
+       "      <td>16:00</td>\n",
+       "      <td>Burnley</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td></td>\n",
+       "      <td>Turf Moor</td>\n",
+       "      <td>Jonathan Moss</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/en/matches/d4360fcd/Burnley-Brighton-and-Hove...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>380 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     gameweek dayofweek       date start_time        home_team  home_xg  \\\n",
+       "0         1.0       Fri 2019-08-09     20:00         Liverpool      1.8   \n",
+       "1         1.0       Sat 2019-08-10     12:30          West Ham      1.1   \n",
+       "2         1.0       Sat 2019-08-10     15:00           Burnley      0.9   \n",
+       "3         1.0       Sat 2019-08-10     15:00           Watford      0.7   \n",
+       "4         1.0       Sat 2019-08-10     15:00    Crystal Palace      0.9   \n",
+       "..        ...       ...        ...        ...              ...      ...   \n",
+       "375      38.0       Sun 2020-07-26     16:00   Manchester City      3.2   \n",
+       "376      38.0       Sun 2020-07-26     16:00           Chelsea      1.4   \n",
+       "377      38.0       Sun 2020-07-26     16:00          West Ham      0.9   \n",
+       "378      38.0       Sun 2020-07-26     16:00     Newcastle Utd      0.1   \n",
+       "379      38.0       Sun 2020-07-26     16:00           Burnley      1.7   \n",
+       "\n",
+       "     home_score  away_score  away_xg        away_team attendance  \\\n",
+       "0             4           1      0.9     Norwich City     53,333   \n",
+       "1             0           5      3.2  Manchester City     59,870   \n",
+       "2             3           0      1.2      Southampton     19,784   \n",
+       "3             0           3      0.8         Brighton     20,245   \n",
+       "4             0           0      1.1          Everton     25,151   \n",
+       "..          ...         ...      ...              ...        ...   \n",
+       "375           5           0      1.0     Norwich City              \n",
+       "376           2           0      0.2           Wolves              \n",
+       "377           1           1      1.0      Aston Villa              \n",
+       "378           1           3      0.6        Liverpool              \n",
+       "379           1           2      1.2         Brighton              \n",
+       "\n",
+       "                     venue         referee  match_report  notes  \\\n",
+       "0                  Anfield  Michael Oliver  Match Report    NaN   \n",
+       "1           London Stadium       Mike Dean  Match Report    NaN   \n",
+       "2                Turf Moor    Graham Scott  Match Report    NaN   \n",
+       "3    Vicarage Road Stadium    Craig Pawson  Match Report    NaN   \n",
+       "4            Selhurst Park   Jonathan Moss  Match Report    NaN   \n",
+       "..                     ...             ...           ...    ...   \n",
+       "375         Etihad Stadium    Craig Pawson  Match Report    NaN   \n",
+       "376        Stamford Bridge  Stuart Attwell  Match Report    NaN   \n",
+       "377         London Stadium  Michael Oliver  Match Report    NaN   \n",
+       "378        St. James' Park  Anthony Taylor  Match Report    NaN   \n",
+       "379              Turf Moor   Jonathan Moss  Match Report    NaN   \n",
+       "\n",
+       "                                             match_url  \n",
+       "0    /en/matches/928467bd/Liverpool-Norwich-City-Au...  \n",
+       "1    /en/matches/71c8a43e/West-Ham-United-Mancheste...  \n",
+       "2    /en/matches/34b99058/Burnley-Southampton-Augus...  \n",
+       "3    /en/matches/38111659/Watford-Brighton-and-Hove...  \n",
+       "4    /en/matches/a802f51e/Crystal-Palace-Everton-Au...  \n",
+       "..                                                 ...  \n",
+       "375  /en/matches/9099d1e5/Manchester-City-Norwich-C...  \n",
+       "376  /en/matches/9cca4ba0/Chelsea-Wolverhampton-Wan...  \n",
+       "377  /en/matches/a3f59c8e/West-Ham-United-Aston-Vil...  \n",
+       "378  /en/matches/b6b1209d/Newcastle-United-Liverpoo...  \n",
+       "379  /en/matches/d4360fcd/Burnley-Brighton-and-Hove...  \n",
+       "\n",
+       "[380 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fbref_functions.results_and_fixtures()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "c1394393",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scores_and_fixtures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "9d49126c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '__warningregistry__',\n",
+       " 'season_results_and_fixtures']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(scores_and_fixtures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f0e4bad5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "3aa9c815",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n",
+      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n",
+      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n",
+      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n",
+      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n",
+      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n",
+      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2018, 2025):\n",
+    "    season_df = scores_and_fixtures.season_results_and_fixtures(\"eng\", i)\n",
+    "    df = pd.concat([df, season_df])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "a27671b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['home_team', 'away_team', 'home_score', 'away_score']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "9af22868",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "119f1eb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goals = 0\n",
+    "\n",
+    "for i, row in df.iterrows():\n",
+    "    if row['home_team'] == \"Arsenal\":\n",
+    "        rpitn\n",
+    "        goals = goals + row['home_score']\n",
+    "    elif row['away_team'] == \"Arsenal\":\n",
+    "        goals = goals + row['away_score']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "2695132c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6fad116",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
